# word2vec

./: CMakeLists.txt  bin2text.c  makefile
